DE close 2026-05-25 PM — QA-262370 rework cycle 2 archived + meta-layer ships (word-ui-vocab-gate hook · rubric v1.1 multi-perspective mode · session-briefing v1.4 no-fence rule · FILE-LOCATIONS.md)
Co-Authored-By: Ruri <noreply@anthropic.com>